feat: add build-time environment variable for API URL in Dockerfile and update deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,3 +27,5 @@ jobs:
                   tags: |
                       satriadhikara/tubes_if4052-fe:latest
                   platforms: linux/amd64
+                  build-args: |
+                      NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
